# CI_2022-23_304811

./: .gitignore  README.md  pyproject.toml
lab1/: README.md  greedy_sol_prof.ipynb  solution.ipynb  test.ipynb  test_py.py
lab2/: GA_functions.py  README.md  solution.py  utils.py
lab3/: README.md  RL_agent.py  RL_main.py  evolving_agent.py  matches.py  min_max_agent.py  nim.py  strategies.py
sample_nb/: 8-puzzle.ipynb
