[tool.poetry]
name = "ci-2022-23-304811"
version = "0.1.0"
description = ""
authors = ["oormacheah <oormacheah@gmail.com>"]
readme = "README.md"
packages = [{include = "ci_2022_23_304811"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
ipykernel = "^6.16.0"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
